--- a/Global/Background/background.html
+++ b/Global/Background/background.html
@@ -2,3 +2,8 @@
     <img alt="background" class="img-responsive" src="<?php echo get_stylesheet_directory_uri() ?>/images/footer-bg.jpg"
         width="1600" height="989" />
 </div>
+
+<div class="site-bg">
+    <img alt="background" class="img-responsive site-grayscale"
+        src="<?php echo get_stylesheet_directory_uri() ?>/images/footer-bg.jpg" width="1567" height="493" />
+</div>
