--- a/Parallax/parallax.html
+++ b/Parallax/parallax.html
@@ -11,10 +11,10 @@
 
 <body>
 
-    <div class="block">
+    <div class="parent">
         <div class="welcome-bg">
-            <img alt="background" data-speed="-.75" class="img-parallax"
-                src="[stylesheet_directory]/images/welcome-bg.jpg" width="1600" height="1229" />
+            <img alt="background" src="<?php echo get_stylesheet_directory_uri() ?>/images/welcome-bg.jpg" width="1600"
+                height="1229" />
         </div>
     </div>
 
